# gstalk

./: .gitignore  Justfile  README.org  flake.nix  meson.build
src/: gstreamer.c  input.c  main.c  menu.c  pipewire.c  pulseaudio.c  receiver.txt  transmitter.txt  util.c
